src/test/fail/return_only_in_if_fail.egern
func square(n: int): int {
    if (n > 3) {
        return n * n
    }
}

square(4);
